card-section done

--- a/index.html
+++ b/index.html
@@ -17,5 +17,40 @@
             <button class="hero-btn">Shop The Hotest Food</button>
         </div>
      </section>
+
+     <!-- card-section -->
+      <section id="card-section">
+            <div class="card-content">
+                <div class="card-heading">
+                    <p class="card-title">Favorite Brands</p>
+                    <h1 class="card-subtitle">Your Favorite Brands Food Are Now On Sale</h1>
+                </div>
+                <div class="card-container">
+                    <div class="single-card">
+                        <img src="./assets/pizza.png" alt="">
+                            <h4 class="food-title"><a href="#">Pizza Burg</a></h4>
+                            <h3 class="food-discount">Up To 50% Off</h3>
+                            <p class="food-description">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                    </div>
+
+                    <div class="single-card">
+                        <img src="./assets/biriyani.png" alt="">
+                            <h4 class="food-title"><a href="#">Kacchi Bhai</a></h4>
+                            <h3 class="food-discount">Up To 50% Off</h3>
+                            <p class="food-description">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                    </div>
+
+                    <div class="single-card">
+                        <img src="./assets/burger.png" alt="">
+                            <h4 class="food-title"><a href="#">Burger King</a></h4>
+                            <h3 class="food-discount">Up To 50% Off</h3>
+                            <p class="food-description">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
+                    </div>
+                </div>
+                <div class="card-button">
+                    <button>Watch All Sells</button>
+                </div>
+            </div>
+      </section>
 </body>
 </html>
